--- a/manifest.yml
+++ b/manifest.yml
@@ -3,10 +3,6 @@ applications:
   memory: 256M
   instances: 1
   domain: stage1.mybluemix.net
-  name: dlms-maint
-  host: dlms-maint
+  name: drafvt
+  host: drafvt
   disk_quota: 1024M
-  services:
-  - cfg-dlms-ys1
-  env:
-    SECGRP: GRP1STGS
