--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "grunt": "^0.4.5",
+    "grunt-cli": "*",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-mocha-test": "^0.12.7",
