--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "housekeeping2",
+  "name": "fvtfordra",
   "version": "0.0.1",
-  "description": "Housekeeping for CloudantDB on DLMS",
+  "description": "Testing DRA3 for FVT.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -20,6 +20,9 @@
   "dependencies": {
     "cloudant": "^1.4.1",
     "expect": "^1.18.0",
+    "grunt": "^0.4.5",
+    "grunt-cli": "*",
+    "grunt-mocha-test": "^0.12.7",
     "mocha": "^2.4.5",
     "newrelic": "^1.26.1",
     "node-uuid": "^1.4.7",
