--- a/manifest.yml
+++ b/manifest.yml
@@ -9,7 +9,7 @@ applications:
   env:
     CF_USER: vjegase@us.ibm.com
     CF_PASS: password-1
-    CF_ORG: vjegase_org
-    DLMS_SERVER: https://dlms.ng.bluemix.net
-    DRA_SERVER: https://dra.ng.bluemix.net
-    AUTH_URL: https://login.ng.bluemix.net/UAALoginServerWAR/oauth/token
+    CF_ORG: vjegase@us.ibm.com
+    DLMS_SERVER: https://dlms.stage1.ng.bluemix.net
+    DRA_SERVER: https://dra.stage1.ng.bluemix.net
+    AUTH_URL: https://login.stage1.ng.bluemix.net/UAALoginServerWAR/oauth/token
