--- a/manifest-stage1.yml
+++ b/manifest-stage1.yml
@@ -1,7 +1,7 @@
 applications:
 - path: .
   memory: 128M
-  instances: 1
+  instances: 6
   domain: stage1.mybluemix.net
   name: drafvtstage1
   host: drafvtstage1
@@ -12,3 +12,4 @@ applications:
     CF_ORG: vjegase@us.ibm.com
     DLMS_SERVER: https://dev-dlms.stage1.ng.bluemix.net
     AUTH_URL: https://login.stage1.ng.bluemix.net/UAALoginServerWAR/oauth/token
+    RUN_INTERVAL: 5
